Bug 1774572 - Handle the case when the Http/2 server doesn't support websocket, r=edgul

Differential Revision: https://phabricator.services.mozilla.com/D165275